Finals & format
git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/branches/tomee-1.7.x@1611274 13f79535-47bb-0310-9956-ffa450edef68